rustwasm/web_sys_document/target/release/build/anyhow-b3d97c713069252a/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/jupiter/rust/WebAssemblyMan/rustwasm/web_sys_document/target/release/build/anyhow-b3d97c713069252a/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
